<resources>
    <string name="app_name">Wekend</string>
    <string name="edit">수정</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="done">완료</string>
    <string name="next">다음</string>
    <string name="accept">수락</string>
    <string name="reject">거절</string>
    <string name="send">보내기</string>
    <string name="delete">삭제</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_error_retry">다시 시도해 주세요</string>
    <string name="title_campaign">전체보기</string>
    <string name="title_likelist">좋아요</string>
    <string name="title_mailbox">메일함</string>
    <string name="title_store">상점</string>
    <string name="title_setting">설정</string>
    <string name="title_recommend_friend">친구추천</string>
    <string name="title_setting_notice">공지사항</string>
    <string name="title_setting_help">도움말</string>
    <string name="title_setting_cc">고객센터</string>
    <string name="title_setting_alarm">알람설정</string>
    <string name="title_map_view">지도보기</string>
    <string name="title_edit_profile">정보수정</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="email_hint">example@entuition.com</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">*********</string>
    <string name="login_not_match">로그인 실패</string>
    <string name="login_not_match_message">아이디 또는 패스워드가 맞지 않습니다</string>
    <string name="session_expired">세션만료</string>
    <string name="session_expired_message">세션이 만료되어 로그인화면으로 돌아갑니다</string>
    <string name="signup_precautions">회원가입을 하면 위켄드의 서비스 약관, 결제 서비스 약관, 개인정보 보호정책, 환불 정책, 보호 프로그램 이용약관에 동의하는 것으로 간주됩니다.</string>
    <string name="find_account_menu_email">이메일 찾기</string>
    <string name="find_account_menu_password">비밀번호 찾기</string>
    <string name="find_account_menu_cc">문의하기</string>
    <string name="find_account_password"><u>이메일계정/비밀번호 찾기</u></string>
    <string name="find_account_comment">회원정보에 등록한 휴대전화 번호를 입력해주세요</string>
    <string name="confirm_account_comment">비밀번호를 찾고자 하시는 이메일 계정을\n입력해 주세요</string>
    <string name="not_found_account_title">계정정보 찾기 실패</string>
    <string name="not_found_account_message">입력하신 계정 정보를 찾을 수 없습니다</string>
    <string name="not_match_phone_title">계정정보 찾기 실패</string>
    <string name="not_match_phone_message">계정정보에 입력된 연락처 정보와 일치하지 않습니다</string>
    <string name="reset_password_comment">계정의 비밀번호를 재설정 해주세요</string>
    <string name="not_valid_password_expression_title">비밀번호 재설정 실패</string>
    <string name="not_valid_password_expression_message">비밀번호는 영문과 숫자의 조합 6자리 이상이어야 합니다</string>
    <string name="not_match_confirm_password_title">비밀번호 재설정 실패</string>
    <string name="not_match_confirm_password_message">비밀번호가 동일하지 않습니다</string>
    <string name="reset_password_complete_title">비밀번호 재설정 완료</string>
    <string name="reset_password_complete_message">비밀번호 재설정이 완료되었습니다\n로그인 화면으로 돌아갑니다</string>
    <string name="input_account_info">이메일주소와 비밀번호를 입력해 주세요</string>
    <string name="signup_email_hint">이메일주소를 입력해 주세요</string>
    <string name="signup_password_hint">영문과 숫자의 조합 6자리이상 입력해 주세요</string>
    <string name="signup_password_confirm">비밀번호 확인</string>
    <string name="signup_password_confirm_hint">비밀번호를 다시 한번 입력해 주세요</string>
    <string name="signup_nickname_hint">두글자 이상 입력해주세요</string>
    <string name="invalid_email">이메일 입력 오류</string>
    <string name="invalid_email_message">적합하지 않은 이메일입니다</string>
    <string name="duplicated_email">이메일 중복확인</string>
    <string name="duplicated_email_message">사용중인 이메일입니다</string>
    <string name="invalid_password">비밀번호 입력 오류</string>
    <string name="invalid_password_message">암호는 알파벳과 숫자 조합 6자리 이상이어야 합니다</string>
    <string name="not_equal_password_message">비밀번호가 동일하지 않습니다</string>
    <string name="signup_failed">회원가입 실패</string>
    <string name="signup_failed_message">아이디 또는 패스워드가 맞지 않습니다</string>
    <string name="signup_failed_retry_message">회원가입에 실패하였습니다\n다시 시도해 주시기 바랍니다</string>
    <string name="input_nickname">닉네임을 작성해 주세요</string>
    <string name="input_gender">성별을 선택해 주세요</string>
    <string name="choose_birth_year">태어난 해를 선택해 주세요</string>
    <string name="check_duplicate">중복확인</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="confirm_input_nickname">닉네임 입력</string>
    <string name="confirm_input_nickname_message">닉네임을 중복확인해야 합니다</string>
    <string name="confirm_duplicated_nickname">닉네임 중복 확인</string>
    <string name="confirm_duplicated_nickname_invalid">사용중인 닉네임입니다</string>
    <string name="confirm_duplicated_nickname_available">사용가능한 닉네임입니다</string>
    <string name="input_mobile_number">휴대폰 번호를 입력해 주세요</string>
    <string name="confirm_verification_comment">인증번호를 입력하고 확인을 눌러주세요.</string>
    <string name="request_verification">인증번호 요청</string>
    <string name="confirm_verification">인증번호 확인</string>
    <string name="retry_request_verification">인증번호 재요청</string>
    <string name="mobile_number_hint">숫자로만 입력해주세요</string>
    <string name="verification_hint">인증번호 6자리</string>
    <string name="send_verification_failed">인증번호 발신 실패</string>
    <string name="send_verification_failed_message">인증번호 발신에 실패하였습니다.\n다시 시도해 주시기 바랍니다</string>
    <string name="not_match_verification">인증번호 확인실패</string>
    <string name="not_match_verification_message">인증번호가 맞지 않습니다\n다시 시도해 주시기 바랍니다</string>
    <string name="send_verification_message">인증번호가 발송되었습니다\n인증번호를 입력해주세요</string>
    <string name="wrong_number">전화번호 오류</string>
    <string name="wrong_number_message">잘못된 전화번호입니다</string>
    <string name="verification_message" formatted="false">[위켄드] 인증번호 [%s]를 입력해주세요</string>
    <string name="select_gender">성별 선택</string>
    <string name="select_gender_message">성별을 선택해야 합니다</string>
    <string name="select_profile_image_please">프로필 사진을 선택해 주세요</string>
    <string name="wait_please">잠시만 기다려주세요</string>
    <string name="wait_signup_now">가입중입니다..</string>
    <string name="bottombar_menu_campaign">캠페인</string>
    <string name="bottombar_menu_likelist">좋아요</string>
    <string name="bottombar_menu_mailbox">메일함</string>
    <string name="bottombar_menu_store">상점</string>
    <string name="bottombar_menu_setting">설정</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_notice">공지사항</string>
    <string name="drawer_menu_help">도움말</string>
    <string name="drawer_menu_profile">프로필</string>
    <string name="drawer_menu_cc">고객센터</string>
    <string name="drawer_menu_setting">알림설정</string>
    <string name="drawer_menu_logout">로그아웃</string>
    <string name="finish_app">위켄드 종료</string>
    <string name="finish_app_message">앱을 종료하시겠습니까?</string>
    <string name="logout_app">위켄드 로그아웃</string>
    <string name="logout_app_message">로그아웃 하시면 로그인화면으로 돌아갑니다\n로그아웃 하시겠습니까?</string>
    <string name="guide_no_more_show">다시보지않음</string>
    <string name="campaign">캠페인</string>
    <string name="campaign_sort_like">좋아요순</string>
    <string name="campaign_sort_recent">최신순</string>
    <string name="category_all">전체 카테고리</string>
    <string name="category_food">맛집</string>
    <string name="category_concert">문화공연</string>
    <string name="category_leisure">레저스포츠</string>
    <string name="sub_category_all">전체 세부 카테고리</string>
    <string name="sub_category_food_0">양식</string>
    <string name="sub_category_food_1">일식</string>
    <string name="sub_category_food_2">중식</string>
    <string name="sub_category_food_3">한식</string>
    <string name="sub_category_food_4">퓨전/아시안/기타</string>
    <string name="sub_category_food_5">디저트/브런치</string>
    <string name="sub_category_food_6">호텔</string>
    <string name="sub_category_concert_0">전시회</string>
    <string name="sub_category_concert_1">클래식/오페라</string>
    <string name="sub_category_concert_2">뮤지컬/연극</string>
    <string name="sub_category_concert_3">일반공연</string>
    <string name="sub_category_leisure_0">레저</string>
    <string name="sub_category_leisure_1">스포츠</string>
    <string name="region_all">전체 지역</string>
    <string name="no_region">지역정보없음</string>
    <string name="region_0">압구정/청담/신사</string>
    <string name="region_1">서래마을/서초/방배</string>
    <string name="region_2">도곡/대치/양재</string>
    <string name="region_3">역삼/논현/삼성</string>
    <string name="region_4">이태원/한남</string>
    <string name="region_5">삼청/효자/인사</string>
    <string name="region_6">평창/부암</string>
    <string name="region_7">종로/광화문</string>
    <string name="region_8">성북/정동</string>
    <string name="region_9">홍대/합정</string>
    <string name="region_10">연남/연희</string>
    <string name="region_11">이촌/용산</string>
    <string name="region_12">잠실/송파/강동</string>
    <string name="region_13">광진/성수</string>
    <string name="region_14">장충/혜화/기타</string>
    <string name="no_campaign_data">검색결과가 없습니다</string>
    <string name="campaign_item_title" formatted="false">[%s] %s</string>
    <string name="campaign_search_hint">상점명/지역명 등으로 검색</string>
    <string name="campaign_keyword_title" formatted="false">\"%s\" 로 검색</string>
    <string name="kakao_talk">카카오톡</string>
    <string name="facebook">페이스북</string>
    <string name="campaign_price" formatted="false">가격대 : %s</string>
    <string name="campaign_parking" formatted="false">주차 : %s</string>
    <string name="campaign_operation_time" formatted="false">영업시간 : %s</string>
    <string name="button_like">좋아요</string>
    <string name="recommend_friends_count" formatted="false">친구 추천 확인 : %d</string>
    <string name="campaign_like_failed">좋아요 실패</string>
    <string name="campaign_share_failed">공유 실패</string>
    <string name="campaign_share_failed_message">공유를 실패하였습니다\n다시 시도해 주세요</string>
    <string name="new_friend_tag">친구추천\nNEW+</string>
    <string name="no_likeinfo_data">마음에 드는 캠페인에 좋아요를 눌러보세요</string>
    <string name="mail_item_date" formatted="false">Date : %s</string>
    <string name="propose_button">함께가기 신청</string>
    <string name="propose_not_made">함께가기 신청중</string>
    <string name="propose_success">함께가기 신청 성공</string>
    <string name="propose_accepted">함께가기 성공</string>
    <string name="propose_rejected">함께가기 거절</string>
    <string name="propose_already_made">다른 캠페인에서 함께가기 성공</string>
    <string name="propose_message_title">상대방에게\n전하고 싶은 메시지를 적어주세요</string>
    <string name="user_input_dialog_hint">200자 내로 적어주세요</string>
    <string name="store_product_0">1000P</string>
    <string name="store_product_1">3000P + 500P</string>
    <string name="store_product_2">5000P + 1000P</string>
    <string name="store_product_3">10000P + 2500P</string>
    <string name="store_product_4">30000P + 8500P</string>
    <string name="store_product_5">매달 정기구독</string>
    <string name="store_product_6">구독 테스트</string>
    <string name="message">메시지</string>
    <string name="nickname">닉네임</string>
    <string name="age">나이</string>
    <string name="nickname_age" formatted="false">%s, %s세</string>
    <string name="mobile">휴대폰 번호</string>
    <string name="introduce">자기소개</string>
    <string name="introduce_hint">200자 내로 작성</string>
    <string name="introduce_error_title">자기소개 작성오류</string>
    <string name="introduce_error_message">자기소개는 200자를 넘을 수 없습니다</string>
    <string name="company">직장</string>
    <string name="company_hint">직장 입력</string>
    <string name="school">학교</string>
    <string name="school_hint">출신 학교 입력</string>
    <string name="user_area">지역</string>
    <string name="user_area_hint">주거 지역 입력</string>
    <string name="formatted_point" formatted="false">보유포인트 %dP</string>
    <string name="subscription_enabled">정기구독중</string>
    <string name="profile_verification">인증요청</string>
    <string name="profile_verification_message">인증번호를 입력하고 확인을 눌러주세요.</string>
    <string name="edit_phone_done">수정완료</string>
</resources>