<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_drawer_notice"
            android:icon="@drawable/img_icon_noti"
            android:title="@string/drawer_menu_notice" />
        <item
            android:id="@+id/menu_drawer_help"
            android:icon="@drawable/img_icon_help"
            android:title="@string/drawer_menu_help" />
        <item
            android:id="@+id/menu_drawer_profile"
            android:icon="@drawable/img_icon_profile"
            android:title="@string/drawer_menu_profile" />
        <item
            android:id="@+id/menu_drawer_cc"
            android:icon="@drawable/img_icon_cc"
            android:title="@string/drawer_menu_cc" />
        <item
            android:id="@+id/menu_drawer_setting"
            android:icon="@drawable/img_icon_setting"
            android:title="@string/drawer_menu_setting" />
        <item
            android:id="@+id/menu_drawer_logout"
            android:icon="@drawable/img_icon_logout"
            android:title="@string/drawer_menu_logout" />
    </group>
</menu>