<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="model"
            type="com.entuition.wekend.view.join.viewmodel.InputAccountViewModel" />
    </data>

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="68dp"
            android:gravity="center"
            android:text="@string/input_account_info"
            android:textColor="@color/colorTextLogin"
            android:textSize="@dimen/login_static_text_big"
            android:includeFontPadding="false" />
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorTextLogin"
            android:textSize="@dimen/login_static_text_small"
            android:text="@string/email"
            android:includeFontPadding="false" />
    
        <EditText
            android:id="@+id/id_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorTextLogin"
            android:textSize="@dimen/login_input_text"
            android:hint="@string/signup_email_hint"
            android:maxLines="1"
            android:theme="@style/CustomEditTextStyle"
            android:includeFontPadding="false"
            android:text="@={model.email}"
            android:afterTextChanged="@{(s) -> model.onChangeEmailText()}"/>
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorTextLogin"
            android:textSize="@dimen/login_static_text_small"
            android:text="@string/password"
            android:includeFontPadding="false" />
    
        <EditText
            android:id="@+id/id_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorTextLogin"
            android:textSize="@dimen/login_input_text"
            android:hint="@string/signup_password_hint"
            android:maxLines="1"
            android:theme="@style/CustomEditTextStyle"
            android:includeFontPadding="false"
            android:text="@={model.password}"
            android:afterTextChanged="@{(s) -> model.onChangePasswordText()}" />
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorTextLogin"
            android:textSize="@dimen/login_static_text_small"
            android:text="@string/signup_password_confirm"
            android:includeFontPadding="false" />
    
        <EditText
            android:id="@+id/id_register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="57dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorTextLogin"
            android:textSize="@dimen/login_input_text"
            android:hint="@string/signup_password_confirm_hint"
            android:maxLines="1"
            android:theme="@style/CustomEditTextStyle"
            android:includeFontPadding="false"
            android:text="@={model.passwordConfirm}" />
    
        <Button
            android:id="@+id/id_button_register_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/next"
            android:textSize="@dimen/button_text_big"
            android:textColor="@drawable/selector_textcolor_button_dark"
            android:background="@drawable/selector_button_white"
            android:enabled="@{model.isValidInputs}"
            android:onClick="@{model::onClickButton}" />
    
    </LinearLayout>

</layout>