<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.entuition.wekend.view.join.viewmodel.ResetPasswordViewModel" />
    </data>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reset_password_comment"
            android:textColor="@color/colorTextLogin"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorTextLogin"
            android:textSize="@dimen/login_static_text_small"
            android:text="@string/password"
            android:includeFontPadding="false" />

        <EditText
            android:id="@+id/id_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorTextLogin"
            android:textSize="@dimen/login_input_text"
            android:hint="@string/signup_password_hint"
            android:maxLines="1"
            android:theme="@style/CustomEditTextStyle"
            android:includeFontPadding="false"
            android:text="@={viewModel.password}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorTextLogin"
            android:textSize="@dimen/login_static_text_small"
            android:text="@string/signup_password_confirm"
            android:includeFontPadding="false" />

        <EditText
            android:id="@+id/id_register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorTextLogin"
            android:textSize="@dimen/login_input_text"
            android:hint="@string/signup_password_confirm_hint"
            android:maxLines="1"
            android:theme="@style/CustomEditTextStyle"
            android:includeFontPadding="false"
            android:text="@={viewModel.passwordConfirm}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:textSize="@dimen/button_text_big"
            android:textColor="@drawable/selector_textcolor_button_dark"
            android:background="@drawable/selector_button_white"
            android:onClick="@{(v) -> viewModel.onClickButton()}"/>

    </LinearLayout>

</layout>